[package]
name = "seaport-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
diesel_derives = "2.0.0"
dotenvy = "0.15"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde" ] }